# BookChain

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  requirements.txt
.github/: CODEOWNERS
.github/workflows/: client-ci.yml  main-ci.yml  miner-ci.yml  publish.yml
bookchain-client/: Dockerfile  README.md  package.json
bookchain-client/public/: index.html  manifest.json
bookchain-client/src/: App.js  App.test.js
bookchain-client/src/components/ApplicationBar/: ApplicationBar.js  index.js
bookchain-client/src/components/BlockCard/: BlockCard.js  index.js
bookchain-client/src/components/BlockView/: BlockView.js  index.js
bookchain-client/src/components/BlocksView/: BlocksView.js  index.js
bookchain-client/src/components/NetworkView/: NetworkView.js  index.js
bookchain-client/src/components/PeerCard/: PeerCard.js  index.js
bookchain-client/src/components/PeerView/: PeerView.js  index.js
bookchain-client/src/components/Theme/: Theme.js
bookchain-client/src/components/UploadView/: UploadView.js  index.js
bookchain-client/src/contexts/UrlsContext/: UrlsContext.js  index.js
bookchain-explorer/: package.json
bookchain-explorer/src/: App.css  App.js  BlockForm.js
bookchain-miner/: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.TEST  README.md
bookchain-miner/src/: CMakeLists.txt  block.cpp  block.hpp  chain.cpp  chain.hpp  chaintools.cpp  chaintools.hpp  crypto.cpp  crypto.hpp  difficulty.cpp  difficulty.hpp  eventflags.cpp  eventflags.hpp  job.cpp  job.hpp  main.cpp  mainminer.cpp  mainminer.hpp  mainpeers.cpp  mainpeers.hpp  miner.cpp  peers.cpp  peers.hpp  queue.hpp  requests.cpp  requests.hpp  storage.cpp  storage.hpp  threadargs.hpp  utils.cpp  utils.hpp  version.hpp
bookchain-miner/src/http/: dtos.hpp  handlers.hpp  server.cpp  server.hpp  servercomponent.hpp
bookchain-miner/src/http/controllers/: block.hpp  hello.hpp  job.hpp  peer.hpp
bookchain-miner/src/http/dtos/: blockdtos.hpp  dtos.hpp  jobdtos.hpp  peerdtos.hpp
bookchain-miner/test/: test.cpp  test_block.cpp  test_chain.cpp  test_chaintools.cpp  test_smoketests.cpp
bookchain-miner/tools/: checkformat.sh  format.sh
src/: app.py  block.py  bookchain.py  miner.py  storage.py  theblock.chain
tools/: buildPublishMultiarch.sh  publishStaging.sh
